mudanças nas rotas

--- a/projeto_livraria/app_livraria/templates/signup.html
+++ b/projeto_livraria/app_livraria/templates/signup.html
@@ -38,7 +38,7 @@
       </ul>
     </div>
     {% endif %}
-    <form method="post">
+    <form method="post" action = "{% url 'cadastro' %}">
       <div class="form-header">
         <p>Criar conta</p>
       </div>
