--- a/projeto_livraria/app_livraria/static/app/styles/common.css
+++ b/projeto_livraria/app_livraria/static/app/styles/common.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap');
 
 :root {
-  --primary: #7898FF;
-  --secondary: #8E64C5;
+  --primary: #73e294;
+  --secondary: #167c41;
   --app-grey: #F2F2F2;
 }
 
